# animx

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  SECURITY.md  TODO.md
src/: CMakeLists.txt  animx.cpp  animx.h
src/internal/: Tbezier.h  interpolators.h  math.h  nurbs.h
tests/: CMakeLists.txt  README.md
tests/modules/: FindMaya.cmake
tests/scripts/: pydll.py  pyplugin.py
tests/src/: CMakeLists.txt  animationPlugin.cpp
